--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
 
-    <p>Hello world</p>
+    <p>Hello World, we are developers! </p>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
