added port-folio navbar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
   </head>
   <body>
 
+   <nav id="nav" class="container-fluid">
+     <div class="styled-nav">
+       <ul>
+      <li>
+        <a href="#">About</a>
+      </li>
+      <li>
+       <a href="#">Work</a>
+      </li>
+      <li>
+       <a href="#">Contact</a>
+      </li>
+    </ul></div>
+   </nav> 
+
     <p>Hello World, we are developers! </p>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
