added portfolio section

--- a/index.html
+++ b/index.html
@@ -1,34 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
+
+<head>
+    <meta charset="UTF-8" />
     <title>My Port-Folio Page</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  </head>
-  <body>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
+</head>
 
-   <nav id="nav" class="container-fluid">
-     <div class="styled-nav">
-       <ul>
-      <li>
-        <a href="#">About</a>
-      </li>
-      <li>
-       <a href="#">Work</a>
-      </li>
-      <li>
-       <a href="#">Contact</a>
-      </li>
-    </ul></div>
-   </nav> 
+<body>
+    <nav id="nav" class="container-fluid">
+        <div class="styled-nav">
+            <ul>
+                <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="#">Work</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-   
+    <section id="welcome-section" class="container-fluid">
+        <h1 class="text-center">Microverse Project</h1>
+    </section>
+
+    <section id="projects" class="container-fluid">
+        <div class="row project-tile">
+            <div class="col-sm-3">
+                <img src="images/randompic.jpeg" alt="" />
+                <a href="#">Plane</a>
+            </div>
+
+            <div class="col-sm-3">
+                <img src="images/randompic.jpeg" alt="" />
+                <a href="#">Plane</a>
+            </div>
+
+            <div class="col-sm-3">
+                <img src="images/randompic.jpeg" alt="" />
+                <a href="#">Plane</a>
+            </div>
+
+            <div class="col-sm-3"></div>
+
+            <div class="col-sm-3"></div>
+
+            <div class="col-sm-3"></div>
+        </div>
+    </section>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script  src="js/index.js"></script>
-  </body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <script src="js/index.js"></script>
+</body>
+
 </html>
