worked on port-folio section

--- a/index.html
+++ b/index.html
@@ -27,32 +27,33 @@
 
     <section id="welcome-section" class="container-fluid">
         <h1 class="text-center">Microverse Project</h1>
+        <p class="text-center">I'm a web Developer</p>
     </section>
 
-    <section id="projects" class="container-fluid">
-        <div class="row project-tile">
-            <div class="col-sm-3">
-                <img src="images/randompic.jpeg" alt="" />
+    <div id="projects" class="container">
+        <div class="project-tile row">
+             <div class="col-sm-4">
+                <img src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg" alt="" />
                 <a href="#">Plane</a>
             </div>
 
-            <div class="col-sm-3">
-                <img src="images/randompic.jpeg" alt="" />
+            <div class="col-sm-4">
+                <img src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg" alt="" />
                 <a href="#">Plane</a>
             </div>
 
-            <div class="col-sm-3">
-                <img src="images/randompic.jpeg" alt="" />
+            <div class="col-sm-4">
+                <img src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg" alt="" />
                 <a href="#">Plane</a>
             </div>
 
-            <div class="col-sm-3"></div>
+            <!-- <div class="col-sm-3"></div>
 
             <div class="col-sm-3"></div>
 
-            <div class="col-sm-3"></div>
+            <div class="col-sm-3"></div>  -->
         </div>
-    </section>
+    </div>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
